<resources>
    <string name="app_name">Crowd Control</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="action_invite">Invite</string>
    <string name="action_change_group_name">Change Group Name</string>
    <string name="action_notification">Notifications</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="WelcomeScreenTitle">Crowd Control</string>
    <string name="title_section4">Section 4</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_group_join">groupJoin</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_user_name">User Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user_name">This User Name is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="login_invalid">Username and password did not match.</string>

    <!-- Strings related to Create a Group -->
    <string name="title_activity_group_create">GroupCreateActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="search_distance">Search Distance</string>
    <string name="logout_full">Log Out</string>
    <string name="menu_option_kick">action_kick</string>
    <string name="menu_option_promote">action_promote</string>
    <string name="title_activity_invite_navigation">InviteNavigationActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
</resources>
